# quadruped-robot

./: .catkin_workspace  .gitignore  LICENSE  README.md  bugs.txt  quadruped-robot.workspace
demo/: CMakeLists.txt  package.xml
demo/a1sim/: CMakeLists.txt  package.xml
demo/a1sim/demo_helloworld/: demo_helloworld.cpp
demo/a1sim/demo_trot_joystick/: demo_trot_joystick.cpp
demo/a1sim/demo_trot_keyboard/: demo_trot_keyboard.cpp
demo/a1sim/demo_trot_position/: demo_trot_position.cpp
demo/a1sim/demo_trot_velocity/: demo_trot_velocity.cpp
demo/a1sim/external_force_motion/: external_force_motion.cpp
demo/demo_helloworld/: demo_helloworld.cpp
demo/demo_helloworld/config/: a1_sim.yaml  stance_leg_controller.yaml
demo/demo_helloworld/real_config/: main.yaml  openloop_gait_generator.yaml  swing_leg_controller.yaml  terrain.yaml
demo/demo_helloworld/sim_config/: main.yaml  terrain.yaml
demo/demo_helloworld_real/: demo_helloworld_real.cpp
demo/demo_navigation_2d/: demo_navigation_2d_gmapping.cpp  demo_navigation_2d_use_map.cpp
demo/demo_publish_odom/: demo_publish_odom.cpp
demo/demo_publish_odom/config/: swing_leg_controller.yaml
demo/demo_publish_odom/real_config/: main.yaml
demo/demo_slam_cartographer/: demo_slam_cartographer.cpp
demo/demo_slam_gmapping/: demo_slam_gmapping.cpp
demo/demo_trot_joystick/: demo_trot_joystick.cpp  joy.yaml
demo/demo_trot_joystick/config/: main.yaml
demo/demo_trot_joystick/real_config/: main.yaml
demo/demo_trot_joystick/sim_config/: main.yaml
demo/demo_trot_keyboard/: demo_trot_keyboard.cpp
demo/demo_trot_keyboard/sim_config/: main.yaml
demo/demo_trot_keyboard_odometry/: demo_trot_keyboard_odometry.cpp
demo/demo_trot_keyboard_odometry/config/: terrain.yaml
demo/demo_trot_position/: demo_trot_position.cpp
demo/demo_trot_position/config/: a1_sim.yaml  stance_leg_controller.yaml
demo/demo_trot_position/sim_config/: openloop_gait_generator.yaml
demo/demo_trot_velocity/: demo_trot_velocity.cpp
demo/demo_trot_velocity/config/: a1_sim.yaml
demo/demo_trot_velocity_mpc/: demo_trot_velocity_mpc.cpp
demo/demo_trot_velocity_mpc/config/: stance_leg_controller.yaml  terrain.yaml
demo/demo_trot_velocity_mpc/sim_config/: main.yaml
demo/demo_trot_velocity_mpc_joystick/: demo_trot_velocity_mpc_joystick.cpp
demo/demo_trot_velocity_mpc_joystick/real_config/: stance_leg_controller.yaml
demo/demo_trot_velocity_wbc/: demo_trot_velocity_wbc.cpp
demo/demo_trot_velocity_wbc/real_config/: stance_leg_controller.yaml
demo/external_force_motion/: external_force_motion.cpp
examples/: CMakeLists.txt  package.xml
examples/example_a1_real/: example_a1_real.cpp
examples/example_a1_sim/: example_a1_sim.cpp
examples/example_a1_sim_keyboard/: example_a1_sim_keyboard.cpp
examples/example_aliengo_real/: example_aligengo_real.cpp
examples/example_aliengo_sim/: example_aliengo_sim.cpp
examples/example_keyboard/: example_keyboard.cpp
examples/example_lite2_real/: example_lite2_real.cpp
examples/example_lite2_sim/: example_lite2sim.cpp  example_lite2sim_standup.cpp
examples/example_lite3_real/: example_lite3_real.cpp
examples/example_lite3_sim/: example_lite3_sim.cpp  example_lite3sim_standup.cpp
navigation/navigation_2d/: CMakeLists.txt  package.xml
navigation/navigation_2d/launch/: amcl.launch  move_base.launch  navigation_gmapping.launch  navigation_use_map.launch
navigation/navigation_2d/maps/: mini_maze_map.pgm  mini_maze_map.yaml
navigation/navigation_2d/param/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  local_planner_params.yaml  move_base_params.yaml
navigation/navigation_2d/rviz/: navigation_2d.rviz
navigation/slam/: CMakeLists.txt  package.xml
navigation/slam/launch/: cartographer_demo.launch  gmapping.launch  gmapping_demo.launch  pointcloud_to_laser.launch
navigation/slam/rviz/: cartographer_2d.rviz  gmapping.rviz
quadruped/: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
quadruped/config/: config.h  f710.config.yaml  qr_config.h  qr_enum_types.h  types.h  user_paramaters.yaml
quadruped/config/a1/: a1_robot.yaml  main.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml  terrain.yaml
quadruped/config/a1_sim/: a1_sim.yaml  openloop_gait_generator.yaml  terrain.yaml
quadruped/config/aliengo/: aliengo_robot.yaml  main.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml  swing_leg_controller.yaml  terrain.yaml
quadruped/config/aliengo_sim/: aliengo_sim.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml  terrain.yaml
quadruped/config/go1/: main.yaml  openloop_gait_generator.yaml  robot_go1.yaml  stance_leg_controller.yaml  swing_leg_controller.yaml  terrain.yaml
quadruped/config/lite2/: lite2_robot.yaml  main.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml  swing_leg_controller.yaml  terrain.yaml
quadruped/config/lite2_sim/: lite2_sim.yaml  main.yaml  stance_leg_controller.yaml
quadruped/config/lite3/: lite3_robot.yaml  stance_leg_controller.yaml  swing_leg_controller.yaml  terrain.yaml
quadruped/config/lite3_sim/: main.yaml  openloop_gait_generator.yaml  robot.yaml  stance_leg_controller.yaml  swing_leg_controller.yaml  terrain.yaml
quadruped/config/robots/: a1_real.yaml  a1_sim.yaml  lite2_sim.yaml
quadruped/src/action/: action.cpp  qr_action.cpp
quadruped/src/common/: qr_geometry.cpp
quadruped/src/controller/: qr_foot_trajectory_generator.cpp  qr_locomotion_controller.cpp  qr_qp_torque_optimizer.cpp  qr_raibert_swing_leg_controller.cpp  qr_torque_stance_leg_controller.cpp
robot_description/lite3_description/: CMakeLists.txt  package.xml
simulation/gazebo_plugins/: .gitignore  CMakeLists.txt  README.md  setup.sh
simulation/qr_gazebo/: CMakeLists.txt  package.xml
simulation/unitree_gazebo/: CMakeLists.txt  package.xml
simulation/unitree_legged_control/: CMakeLists.txt  package.xml  unitree_controller_plugins.xml
src/ascend-quadruped-cpp/: CMakeLists.txt  README.md  package.xml
src/quadruped/: CMakeLists.txt  README.md  package.xml
(+1169 files in other folders)
