<?xml version="1.0"?>
<package format="2">
  <name>demo</name>
  <version>0.1.0</version>
  <description>The demo package</description>

  <maintainer email="1973671061@qq.com">ZhenyuXu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>quadruped</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>quadruped</exec_depend>

  <export>
  </export>
</package>
