<?xml version="1.0"?>
<package format="2">
    <name>quadruped</name>
    <version>1.11.0</version>
    <description>The quadruped package</description>
    <maintainer email="51215902047@stu.ecnu.edu.cn">ZhenyuXu</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>tinyekf</depend>
    <depend>quadprogpp</depend>
    <depend>tinynurbs</depend>
    <depend>unitree_legged_sdk</depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>unitree_legged_msgs</depend>
    <depend>amd</depend>
    <depend>osqp</depend>
    <depend>qpOASES</depend>
    <depend>tf</depend>
    <depend>nav_msgs</depend>

    <export>
    </export>
</package>
